[package]
name = "todo_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = {version = "0.4", features = ["serde"]}
serde_json = "1.0.140"
tabled = "0.20.0"
owo-colors = "4.2.1"
